infrastructure/modules/movie-app-vpc/main.tf
data "aws_availability_zones" "available" {
  state = "available"
}

# VPC Resources
resource "aws_vpc" "movie_app" {
  cidr_block           = var.main_vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "${var.service}-vpc"
  }
}

resource "aws_subnet" "public_subnet_a" {
  vpc_id            = aws_vpc.movie_app.id
  cidr_block        = var.public_subnet_a
  availability_zone = data.aws_availability_zones.available.names[0]
  tags = {
    Name = "${var.service}-public-subnet-a"
  }
}

resource "aws_subnet" "private_subnet_a" {
  vpc_id            = aws_vpc.movie_app.id
  cidr_block        = var.private_subnet_a
  availability_zone = data.aws_availability_zones.available.names[0]
  tags = {
    Name = "${var.service}-private-subnet-a"
  }
}

resource "aws_subnet" "public_subnet_b" {
  vpc_id            = aws_vpc.movie_app.id
  cidr_block        = var.public_subnet_b
  availability_zone = data.aws_availability_zones.available.names[1]
  tags = {
    Name = "${var.service}-public-subnet-b"
  }
}

resource "aws_subnet" "private_subnet_b" {
  vpc_id            = aws_vpc.movie_app.id
  cidr_block        = var.private_subnet_b
  availability_zone = data.aws_availability_zones.available.names[1]
  tags = {
    Name = "${var.service}-private-subnet-b"
  }
}

resource "aws_internet_gateway" "movie_app" {
  vpc_id = aws_vpc.movie_app.id
  tags = {
    Name = "${var.service}-internet-gateway"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.movie_app.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.movie_app.id
  }
  tags = {
    Name = "${var.service}-public-route-table"
  }
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.movie_app.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.movie_app_nat.id
  }

  tags = {
    Name = "${var.service}-private-route-table"
  }
}

resource "aws_route_table_association" "public_a" {
  subnet_id      = aws_subnet.public_subnet_a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_b" {
  subnet_id      = aws_subnet.public_subnet_b.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private_a" {
  subnet_id      = aws_subnet.private_subnet_a.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_b" {
  subnet_id      = aws_subnet.private_subnet_b.id
  route_table_id = aws_route_table.private.id
}

resource "aws_eip" "nat_gateway" {
  vpc = true
}

resource "aws_nat_gateway" "movie_app_nat" {
  allocation_id = aws_eip.nat_gateway.id
  subnet_id     = aws_subnet.public_subnet_a.id

  tags = {
    Name = "Movie app NAT"
  }

  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [aws_internet_gateway.movie_app]
}
